@@ -104,6 +104,12 @@ CHANGES WITH 243 in spe:
           all" pattern instead, e.g. OriginalName=* or Name=* in case all
           interfaces should really be matched.
 
+        * A new setting NUMAPolicy= may be used to set process memory
+          allocation policy. Setting can be specified in system.conf and
+          hence will set the default policy for PID1. Default policy can be
+          overriden on per-service basis. Related setting NUMAMask= is used to
+          specify NUMA node mask that should be associated with the selected
+          policy.
           …
 
 CHANGES WITH 242:
@@ -124,7 +130,6 @@ CHANGES WITH 242:
           `SYSTEMD_LOG_LEVEL=debug udevadm test-builtin net_setup_link /sys/class/net/<name>`
           may be used to view this.
 
-        * The .device units generated by elogind-fstab-generator and other
           Hint: if a bridge interface is created without any slaves, and gains
           a slave later, then now the bridge does not inherit slave's MAC.
           To inherit slave's MAC, for example, create the following file:
@@ -137,6 +142,7 @@ CHANGES WITH 242:
           MACAddressPolicy=none
           ```
 
+        * The .device units generated by elogind-fstab-generator and other
           generators do not automatically pull in the corresponding .mount unit
           as a Wants= dependency. This means that simply plugging in the device
           will not cause the mount unit to be started automatically. But please
